# pydantic-ai-agent-with-notion-mcp-server

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/pydantic_ai_agent/: main.py
src/pydantic_ai_agent/llm/: __init__.py  models.py  providers.py
src/pydantic_ai_agent/mcp_servers/: __init__.py  notion_mcp_server.py
src/pydantic_ai_agent/settings/: settings.py
