[project]
name = "pydantic-ai-agent-with-notion-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Pawel Trojanski",email = "trojanskip@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-ai[logfire] (>=0.4.0,<0.5.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pydantic_ai_agent", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
