[project]
name = "pydantic-ai-agent-with-notion-mcp-server"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-ai[logfire]>=0.4.0",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_agent"]
