[project]
name = "pydantic-ai-agent-with-notion-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[logfire]>=0.4.0",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
